- The new virtual function cSkinDisplayMenu::SetItemEvent(..., const cTimer *Timer) can be
  used to get full access to the timer (if any) defined for this event.
- Added mutex locks to protect creating/deleting cStatus and cEpgHandler objects (suggested
  by Markus Ehrnsperger).
- Making absolutely sure cEvent::Title() never returns NULL.
  APIVERSNUM is now 30007.
- Improved subtitle handling:
  + Subtitles now disappear as signaled in the data stream.
  + Subtitles are now kept in memory for at least 120 seconds, to have them readily
    available after a short rewind during replay.
- Subtitles can now be temporarily displayed after a fast rewind:
  + The setup option "DVB/Display subtitles" now has three settings: "no" and "always"
    behave like before, the new "after rewind" turns on subtitles after a fast rewind
    during replay, and off again when the point where the rewind was started is reached.
- Removed an unnecessary call to cDevice::GetVideoSize().
- Moved the call to Empty() back into the pmSlow case (thanks to Andreas Baierl).
- Fixed spurious times shown in the progress display when switching from "play" to "fast
  forward".
- Now deleting old recording info before reading modified info file (suggested by
  Stefan Hofmann).

2025-06-18:

- Fixed some misplaced 'override' keywords in the 'hello' and 'skincurses' plugins.
- cRecording now fetches priority, lifetime and framesPerSecond from cRecordingInfo.
  APIVERSNUM is now 30008.
- Now forcing re-reading the info file of an ongoing recording (reported by Christoph
  Haubrich).
- Updated the Italian OSD texts (thanks to Diego Pierotto).
- Enabled manually turning subtitles on/off in 'after rewind' mode.
- Limiting timeouts to a minimum of 3ms to avoid problems with polls and waits if timeout is 0.
- Fixed strreplace() in case the search string is empty (thanks to Stefan Hofmann).
- Fixed automatic moving of the cursor when inputting characters with number keys (reported
  by Stefan Hofmann).