@@ -3461,6 +3461,7 @@ Matthias Senzel <matthias.senzel@t-online.de>
  for fixing an unnecessary double display of menu items in the Recordings menu
  for reporting a bug in handling cSkinDisplayMenu::GetTextAreaFont()
  for reporting characters being cut off while editing in the LCARS skin
+ for fixing updating the index when cutting a recording again
 
 Marek Nazarko <mnazarko@gmail.com>
  for translating OSD texts to the Polish language
