@@ -10119,7 +10119,7 @@ Video Disk Recorder Revision History
 - Now deleting old recording info before reading modified info file (suggested by
   Stefan Hofmann).
 
-2025-06-18:
+2025-06-19:
 
 - Fixed some misplaced 'override' keywords in the 'hello' and 'skincurses' plugins.
 - cRecording now fetches priority, lifetime and framesPerSecond from cRecordingInfo.
@@ -10132,3 +10132,4 @@ Video Disk Recorder Revision History
 - Fixed strreplace() in case the search string is empty (thanks to Stefan Hofmann).
 - Fixed automatic moving of the cursor when inputting characters with number keys (reported
   by Stefan Hofmann).
+- Fixed updating the index when cutting a recording again (thanks to Matthias Senzel).
